25-August-2011 Improved exception message if Opus cannot locate a class in it's module database to add option updates from.

25-August-2011 ModuleUtilities.GetModule will now return an IModule if it is a valid base class. This allows for base classes to also add option update delegates.

25-August-2011 Changed end of the build from "Build complete" to "Build finished" as complete sounds like success.

24-August-2011 Added C compiler option OmitFramePointer.
               Added Gcc and Mingw compiler option InlineFunctions.
               Added VisualC compiler options InlineFunctionExpansion and EnableIntrinsicFunctions.

23-August-2011 Fixed testpackage Test-dev to compile in debug with VisualC, and extended to try out AdditionalOptions on all supported compilers.

23-August-2011 C archiver, compiler and linker "AdditionalOptions" added, that blindly adds space separated options to the appropriate tool. Use this to add options that the Opus plugin doesn't yet expose.
               VisualC compiler added "BasicRuntimeChecks" and "SmallerTypeConversionRuntimeCheck" options.

23-August-2011 C compilation #defines added:
               * D_OPUS_PLATFORM_BITS=<n> where n is 32 or 64.
               * D_OPUS_PLATFORM_LITTLEENDIAN for little endian platforms.
               * D_OPUS_PLATFORM_BIGENDIAN for big endian platforms.

23-August-2011 Added OPUS_HOST_<platform> to the script compiler #defines.

23-August-2011 Added more options for converting Opus.Core.EPlatform to a string.

21-August-2011 Added Opus.Core.State.IsLittleEndian to query the endianness of the host platform. Might be useful on OSX.

21-August-2011 Removed old platform detection code. The new code is known to run on all supported platforms.

21-August-2011 Removing unnecessary namespace resolution in the Opus code.
