@@ -87,13 +87,11 @@ namespace DotNetFramework
     {
         static DotNet()
         {
-            if (Opus.Core.State.HasCategory("VSSolutionBuilder"))
+            if (!Opus.Core.State.HasCategory("VSSolutionBuilder"))
             {
-                throw new Opus.Core.Exception("VS Solution Builder state has already been set");
+                Opus.Core.State.AddCategory("VSSolutionBuilder");
+                Opus.Core.State.Add<System.Type>("VSSolutionBuilder", "SolutionType", typeof(DotNetFramework.Solution));
             }
-
-            Opus.Core.State.AddCategory("VSSolutionBuilder");
-            Opus.Core.State.Add<System.Type>("VSSolutionBuilder", "SolutionType", typeof(DotNetFramework.Solution));
         }
 
         public static string VersionString
